--- a/style/client.css
+++ b/style/client.css
@@ -1125,6 +1125,7 @@ p.or:after {
 
 	overflow: hidden;
 	white-space: nowrap;
+	text-align:center;
 }
 .roomlist a.ilink small {
 	font-size: 8pt;
@@ -3251,6 +3252,7 @@ a.ilink.yours {
 	border-color: #7799BB;
 	background: rgba(30, 40, 50, .5);
 	color: #7799BB;
+	text-align:center;
 }
 .dark .roomlist a.ilink:hover {
 	border-color: #AACCEE;
